made some alignment fixes, changed from rem to px for nav buttons

--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -32,12 +32,14 @@
 	border-radius: 3px;
 	box-shadow: 1px 2px 7px 0px rgba(0, 0, 0, 0.25), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 	transition: background 0.2s ease-in-out;
-	width: 1.6rem;
+	padding-top: 4px;
+	width: 26px;
 }
 
 .toggleBtn {
 	position: fixed;
-	right: 0px;
+	padding-top: 4px;
+	right: 6px;
 	bottom: 90px;
 	z-index: 2;
 	transition: 0.4s ease-in-out;
@@ -46,7 +48,7 @@
 	border-radius: 3px;
 	box-shadow: 1px 2px 7px 0px rgba(0, 0, 0, 0.25), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 	transition: background 0.2s ease-in-out, width 0.8s ease-in-out;
-	width: 1.7rem;
+	width: 26px;
 }
 
 @media (min-width: 600px) {
@@ -54,7 +56,7 @@
 			bottom: 40%;
 	}
 	.toggleBtn {
-			bottom: 55%;
+			bottom: 50%;
 	}
 	.sectionList li:hover,
 	.sectionList li:active,
